adds some example to unit test